Fix overflow

--- a/app/assets/styles/base/_core.scss
+++ b/app/assets/styles/base/_core.scss
@@ -1,6 +1,7 @@
 * {
     max-width: 100vw;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 html {
